# msg2po

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  action.yml  bgforge-config.py  bgforge_po.py  config.py  diff_male_female_po_to_csv.py  dir2msgstr  dir2msgstr.py  female_csv2po  female_csv2po.py  file2msgstr.py  file2po.py  gha.sh  indexed_txt2msgstr  indexed_txt2msgstr.py  indexed_txt2po  indexed_txt2po.py  msg2msgstr  msg2msgstr.py  msg2po  msg2po.py  msgmerge.py  po2file.py  po2indexed_txt  po2indexed_txt.py  po2msg  po2msg.py  po2sve  po2sve.py  po2tra  po2tra.py  poify  poify.py  pyproject.toml  (+18 more)
.github/: action.sh
.github/workflows/: lint.yml  release.yml  requirements.yml
action/: dir2msgstr.sh  init.sh  poify.sh  push.sh  unpoify.sh
docs/: action.md  changelog.md
gha/poify/: action.yml  poify.sh
gha/unpoify/: action.yml  unpoify.sh
msg2po/: __init__.py  bgforge-config.py  bgforge_config.py  common.py  config.py  conversion.py  core.py  diff_male_female_po_to_csv.py  dir2msgstr.py  encoding.py  female_csv2po.py  file2msgstr.py  file2po.py  formats.py  indexed_po.py  languages.py  log.py  lowercase.py  msgmerge.py  po2file.py  po_utils.py  po_wrap.py  poify.py  resave-po.py  resave_po.py  transfile.py  unfuzzy-cassidy.py  unfuzzy.py  unfuzzy.yml  unpoify.py
tests/: all.sh  conftest.py  e2e.sh  profile_it.py  profile_it.sh  profile_workflow.py  test_common.py  test_conversion.py  test_core_utils.py  test_encoding.py  test_indexed_po.py  test_logging.py  test_metadata_regressions.py  test_transfile.py  test_unfuzzy.py  test_unpoify.py
tests/fixtures/: sample.msg  sample.sve  sample.tra  sample_indexed.txt  sample_nonindexed.txt  sample_translated.msg  sample_translated.tra
tests/po/: fixtures.pot
