[tool.poetry]
name = "msg2po"
version = "1.1.15"
description = "A set of helper tools to convert Fallout 1/2 MSG and WeiDU TRA into GNU gettext PO and back."
authors = ["BGforge <dev@bgforge.net>"]
keywords = ["Fallout", "Fallout 2", "Baldur's Gate", "Infinity Engine", "WeiDU"]
readme = "README.md"
homepage = "https://github.com/BGforgeNet/msg2po"
repository = "https://github.com/BGforgeNet/msg2po"

[tool.poetry.dependencies]
configparser = ">=5.2.0"
natsort = ">=6.2.1,<7"
polib = ">=1.1.1"
python-dateutil = ">=2.8.2"
"ruamel.yaml" = ">=0.17.21"
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
flake8 = ">=4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.poetry.plugins."console_scripts"]
"bgforge-config" = "msg2po.bgforge_config:main"
"dir2msgstr" = "msg2po.dir2msgstr:main"
"file2msgstr" = "msg2po.file2msgstr:main"
"file2po" = "msg2po.file2po:main"
"lowercase" = "msg2po.lowercase:main"
"msgmerge-female" = "msg2po.msgmerge:main"
"po2file" = "msg2po.po2file:main"
"poify" = "msg2po.poify:main"
"resave-po" = "msg2po.resave_po:main"
"unpoify" = "msg2po.unpoify:main"
